# camera_pose

./: .gitignore
camera_pose_calibration/: CMakeLists.txt  package.xml
camera_pose_calibration/blocks/: stamina_calibration_tf_publisher.launch
camera_pose_calibration/launch_extrinsics/: calibrate_two_cameras.launch
camera_pose_calibration/launch_intrinsics/: calibrate_kinect_intrinsics.launch
camera_pose_calibration/src/: ur10.urdf
camera_pose_calibration/src/camera_pose_calibration/: capture_monitor.py  filter_intervals.py  init_optimization_prior.py  multicam_capture_exec.py  run_optimization_online.py  stamina_calibration_transform_publisher.py  update_urdf.py
camera_pose_calibration/srv/: CalibrateSwitch.srv
camera_pose_toolkits/: main.launch
camera_pose_toolkits/launch/: urdf_updater.launch
kinect_depth_calibration/: manifest.xml
